--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@ng-bootstrap/ng-bootstrap": "^5.2.3",
+    "@okta/okta-angular": "^1.4.0",
     "admin-lte": "^3.0.2",
     "bootstrap": "^4.4.1",
     "hammerjs": "^2.0.8",
